amethyst/kubernetes/mydata/navidrome/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: mydata
  name: navidrome-policy
specs:
  # navidrome connection from ingress-nginx
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: navidrome
    ingress:
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: ingress-nginx
              app.kubernetes.io/name: ingress-nginx
        toPorts:
          - ports:
              - protocol: TCP
                port: "4533"
  # backup and restore
  - &backup-restore-b2
    endpointSelector:
      matchLabels:
        app.kubernetes.io/created-by: volsync
        job-name: volsync-src-navidrome-data-backup
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: kube-system
              k8s-app: kube-dns
        toPorts:
          - ports:
              - protocol: ANY
                port: "53"
            rules:
              dns:
                - matchPattern: &b2 s3.us-east-005.backblazeb2.com
      - toFQDNs:
          - matchName: *b2
        toPorts:
          - ports:
              - protocol: TCP
                port: "443"
  - <<: *backup-restore-b2
    endpointSelector:
      matchLabels:
        app.kubernetes.io/created-by: volsync
        job-name: volsync-src-navidrome-db-backup
